# xiangqi

./: .env.example  .gitignore  README.md  config.yaml  gm.sh  go.mod  go.sum  pyproject.toml  restart_game_server.sh
.codebuddy/rules/: 前端工程开发规范.mdc
cmd/game/: main.py
cmd/server/: main.go
cmd/web/: index.html  package-lock.json  tsconfig.app.json  vite.config.ts  xiangqi-1.0.tgz
config/: config.go
docs/: 01-web-service-design.md  02-game-service-design.md  03-ai-service-design.md  04-shared-protocols.md  05-game-service-implementation-plan.md  06-frontend-design.md  07-frontend-dev-spec.md  07-ui-upgrade-plan.md  07-ws-architecture-plan.md  08-frontend-refactor-tasks.md  09-ai-optimization-analysis.md  xianqi-architecture.md
game-service/: config.py  config.yaml  main.py  requirements.txt  start.sh
game-service/admin/: __init__.py  admin_handler.py  admin_service.py
game-service/ai/: __init__.py  ai_proxy.py  difficulty.py  engine.py
migrations/: 001_init.sql
scripts/: init_db.sql
shared/: __init__.py  constants.go  constants.py  errors.go  errors.py  protocol.go  protocol.py
tests/: __init__.py  ai_engine_analyzer.py  conftest.py  test_ai_engine.py  test_checkmate_threat_detection.py  test_double_cannon_checkmate.py  test_game.py  test_game_protocol.py  test_move_generator.py  test_move_validator.py  test_piece.py  test_player_session.py  test_quick_verify.py  test_recorder.py  test_room_manager.py  test_room_runner.py  test_room_runner_extra.py  test_win_checker.py
xiangqi-assets/: DEVELOPMENT_GUIDE.md  assets-index.json  demo.html  index.html
(+164 files in other folders)
